--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,14 @@
 name: Automated Tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch: 
+
+permissions:
+  contents: write
 
 jobs:
   cypress-run:
@@ -21,4 +29,18 @@ jobs:
       - name: Run Cypress Tests
         working-directory: ./Test Suite Folder
         run: npx cypress run
-        continue-on-error: true 
+        continue-on-error: true
+
+      - name: Generate Allure Report
+        working-directory: ./Test Suite Folder
+        run: |
+          npm install -g allure-commandline
+          npx allure generate allure-results --clean -o allure-report
+
+      - name: Deploy Report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        if: always() # Run even if tests fail
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: ./Test Suite Folder/allure-report
