--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,19 +23,19 @@ jobs:
           node-version: 20
 
       - name: Install Dependencies
-        # CHANGED: Updated folder path
-        working-directory: ui-automation
+        # CHANGED: Full path to your folder
+        working-directory: ./Test Suite Folder/ui-automation
         run: npm install
 
       - name: Run Cypress Tests
-        # CHANGED: Updated folder path
-        working-directory: ui-automation
+        # CHANGED: Full path to your folder
+        working-directory: ./Test Suite Folder/ui-automation
         run: npx cypress run
         continue-on-error: true
 
       - name: Generate Allure Report
-        # CHANGED: Updated folder path
-        working-directory: ui-automation
+        # CHANGED: Full path to your folder
+        working-directory: ./Test Suite Folder/ui-automation
         run: |
           npm install -g allure-commandline
           npx allure generate allure-results --clean -o allure-report
@@ -46,5 +46,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          # CHANGED: Updated folder path
-          publish_dir: ui-automation/allure-report
+          # CHANGED: Full path to the report
+          publish_dir: ./Test Suite Folder/ui-automation/allure-report
