--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,19 +23,16 @@ jobs:
           node-version: 20
 
       - name: Install Dependencies
-        # CHANGED: Full path to your folder
-        working-directory: ./Test Suite Folder/ui-automation
+        working-directory: "./Test Suite Folder"
         run: npm install
 
       - name: Run Cypress Tests
-        # CHANGED: Full path to your folder
-        working-directory: ./Test Suite Folder/ui-automation
+        working-directory: "./Test Suite Folder"
         run: npx cypress run
         continue-on-error: true
 
       - name: Generate Allure Report
-        # CHANGED: Full path to your folder
-        working-directory: ./Test Suite Folder/ui-automation
+        working-directory: "./Test Suite Folder"
         run: |
           npm install -g allure-commandline
           npx allure generate allure-results --clean -o allure-report
@@ -46,5 +43,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          # CHANGED: Full path to the report
-          publish_dir: ./Test Suite Folder/ui-automation/allure-report
+          publish_dir: "./Test Suite Folder/allure-report"
